--- a/source/index.html
+++ b/source/index.html
@@ -6,16 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Internship</title>
   <meta name="description" content="Сайт компании Internship. Обучение за рубежом">
-  <!-- <link rel="icon" href="favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png">
-    <link rel="preload" href="fonts/montserrat/Montserrat-ExtraBold.woff2" type="font/woff2" as="font">
-    <link rel="preload" href="fonts/montserrat/Montserrat-Bold.woff2" type="font/woff2" as="font">
-    <link rel="preload" href="fonts/montserrat/Montserrat-SemiBold.woff2" type="font/woff2" as="font">
-    <link rel="preload" href="fonts/montserrat/Montserrat-Medium.woff2" type="font/woff2" as="font">
-    <link rel="preload" href="fonts/montserrat/Montserrat-Regular.woff2" type="font/woff2" as="font">
-    <link rel="preload" href="fonts/montserrat/Montserrat-Light.woff2" type="font/woff2" as="font">
-    <link rel="manifest" href="manifest.json"> -->
+  <!-- <link rel="icon" href="favicon.ico"> -->
+  <!-- <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png"> -->
+  <!-- <link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96x96.png"> -->
+  <link rel="preload" href="fonts/Manrope-Bold.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Manrope-ExtraBold.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Manrope-ExtraLight.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Manrope-Light.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Manrope-Medium.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Manrope-Regular.woff2" type="font/woff2" as="font">
+  <link rel="preload" href="fonts/Manrope-SemiBold.woff2" type="font/woff2" as="font">
+  <!-- <link rel="manifest" href="manifest.json"> -->
   <link rel="stylesheet" href="sass/style.scss">
 </head>
 
@@ -359,7 +360,7 @@
     <section class="news" data-test="news">
       <h2 class="news__title">Новости и материалы</h2>
       <div class="news__tabs">
-        <nav class="news__nav">
+        <nav class="news__nav" aria-label="Навигация по категориям новостей">
           <ul class="news__nav-list">
             <li class="news__nav-item">
               <a class="news__nav-link" href="#">Общее</a>
@@ -512,7 +513,7 @@
               благодарность за предоставленную мне возможность.</blockquote>
           </div>
 
-          <div class="news__slide swiper-slide">
+          <div class="reviews__slide swiper-slide">
             <div class="reviews__avatar-wrapper">
               <picture>
                 <source width="490" height="682" type="image/webp"
@@ -606,8 +607,8 @@
           <option value="novosibirsk">Новосибирск</option>
         </select>
 
-        <input type="checkbox" id="personalData" name="personalData">
-        <label for="personalData">Я согласен на обработку моих персональных данных</label>
+        <input type="checkbox" id="personal-data" name="personalData">
+        <label for="personal-data">Я согласен на обработку моих персональных данных</label>
 
         <button class="form__send button button--primary" type="submit">Отправить</button>
       </form>
@@ -618,7 +619,7 @@
     <svg class="footer__logo-icon" width="52" height="52" viewBox="0 0 52 52" fill="none"
       xmlns="http://www.w3.org/2000/svg">
       <rect width="52" height="52" rx="26" fill="#fff" />
-      <g clip-path="url(#a)">
+      <g clip-path="url(#b)">
         <path
           d="M11.92 19.8c-.85.6-1.35 1.9-.41 3.43.94 1.53 14.38 11.9 14.88 12.2.49.28.98.33 2.24-.68 1.25-1 11.74-8.88 12-9.12.44-.38.54-1.3 0-1.73 0 0-12.7 9.5-13.11 9.89-.42.38-1.06-.24-.94-1.06.12-.81.2-.9 1.82-2.16a2565.5 2565.5 0 0 1 11.18-8.48c.47-.35.48-.96-.3-1.5l-13.01-9.27c-.4-.3-.93-.55-1.73.02-.81.58-11.06 7.35-12.62 8.46Z"
           fill="#316DC2" />
@@ -629,13 +630,13 @@
           fill="#98B8E6" />
       </g>
       <defs>
-        <clipPath id="a">
+        <clipPath id="b">
           <path fill="#fff" transform="translate(11 11)" d="M0 0h30v30h-30z" />
         </clipPath>
       </defs>
     </svg>
 
-    <nav class="footer__nav" aria-label="Основное меню сайта">
+    <nav class="footer__nav" aria-label="Сокращенное меню сайта">
       <ul class="footer__nav-list">
         <li class="footer__nav-item">
           <a class="footer__nav-link" href="#about">О проекте</a>
@@ -662,15 +663,15 @@
 
       <ul class="footer__social-list social-list">
         <li class="social-list__item">
-          <a class="social-list__link social-list__link--vk" href="https://vk.com" target="_blank"><span class="visually-hidden">Мы во
-              Vkontakte</span></a>
+          <a class="social-list__link social-list__link--vk" href="https://vk.com" target="_blank" rel="noopener noreferrer"><span
+              class="visually-hidden">Мы во Vkontakte</span></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link social-list__link--ok" href="https://ok.ru" target="_blank"><span class="visually-hidden">Мы в
-              Одноклассниках</span></a>
+          <a class="social-list__link social-list__link--ok" href="https://ok.ru" target="_blank" rel="noopener noreferrer"><span
+              class="visually-hidden">Мы в Одноклассниках</span></a>
         </li>
         <li class="social-list__item">
-          <a class="social-list__link social-list__link--reddit" href="https://www.reddit.com/" target="_blank"><span
+          <a class="social-list__link social-list__link--reddit" href="https://www.reddit.com/" target="_blank" rel="noopener noreferrer"><span
               class="visually-hidden">Мы в Reddit</span></a>
         </li>
       </ul>
