--- a/source/index.html
+++ b/source/index.html
@@ -110,14 +110,14 @@
                 <picture>
                   <source media="(min-width: 1440px)" width="1440" height="800" type="image/webp"
                     srcset="img/hero/slide-1/hero-slide-1-desktop@1x.webp 1x, img/hero/slide-1/hero-slide-1-desktop@1x.webp 2x">
-                  <source media="(min-width: 768px)" width="768" height="1034" type="image/webp"
+                  <source media="(min-width: 768px)" width="768" height="1024" type="image/webp"
                     srcset="img/hero/slide-1/hero-slide-1-tablet@1x.webp 1x, img/hero/slide-1/hero-slide-1-tablet@1x.webp 2x">
                   <source width="320" height="568" type="image/webp"
                     srcset="img/hero/slide-1/hero-slide-1-mobile@1x.webp 1x, img/hero/slide-1/hero-slide-1-mobile@1x.webp 2x">
 
                   <source media="(min-width: 1440px)" width="1440" height="800" type="image/jpg"
                     srcset="img/hero/slide-1/hero-slide-1-desktop@1x.jpg 1x, img/hero/slide-1/hero-slide-1-desktop@2x.jpg 2x">
-                  <source media="(min-width: 768px)" width="768" height="1034" type="image/jpg"
+                  <source media="(min-width: 768px)" width="768" height="1024" type="image/jpg"
                     srcset="img/hero/slide-1/hero-slide-1-tablet@1x.jpg 1x, img/hero/slide-1/hero-slide-1-tablet@2x.jpg 2x">
                   <img class="hero__image" src="img/hero/slide-1/hero-slide-1-mobile@1x.jpg" width="320" height="568"
                     srcset="img/hero/slide-1/hero-slide-1-mobile@2x.jpg" alt="Фотография" loading="lazy">
@@ -126,11 +126,13 @@
 
               <div class="hero__slide-text-wrapper">
                 <h2 class="hero__slide-title">Глобальный профессиональный опыт обучения за рубежом</h2>
-                <p>Погрузитесь в академическую программу, проходя практику в разных городах, ощущая настоящий
-                  студенческий стиль жизни!</p>
+                <div class="hero__slide-description-wrapper">
+                  <p>Погрузитесь в академическую программу, проходя практику в разных городах, ощущая настоящий
+                    студенческий стиль жизни!</p>
                   <div class="hero__button-wrapper">
-                <a class="hero__details button button--primary" href="#">Подробнее</a>
+                    <a class="hero__details button button--primary" href="#">Подробнее</a>
                   </div>
+                </div>
               </div>
             </div>
             <div class="hero__slide swiper-slide">
@@ -138,14 +140,14 @@
                 <picture>
                   <source media="(min-width: 1440px)" width="1440" height="800" type="image/webp"
                     srcset="img/hero/slide-2/hero-slide-2-desktop@1x.webp 1x, img/hero/slide-2/hero-slide-2-desktop@1x.webp 2x">
-                  <source media="(min-width: 768px)" width="768" height="1034" type="image/webp"
+                  <source media="(min-width: 768px)" width="768" height="1024" type="image/webp"
                     srcset="img/hero/slide-2/hero-slide-2-tablet@1x.webp 1x, img/hero/slide-2/hero-slide-2-tablet@1x.webp 2x">
                   <source width="320" height="568" type="image/webp"
                     srcset="img/hero/slide-2/hero-slide-2-mobile@1x.webp 1x, img/hero/slide-2/hero-slide-2-mobile@1x.webp 2x">
 
                   <source media="(min-width: 1440px)" width="1440" height="800" type="image/jpg"
                     srcset="img/hero/slide-2/hero-slide-2-desktop@1x.jpg 1x, img/hero/slide-2/hero-slide-2-desktop@1x.jpg 2x">
-                  <source media="(min-width: 768px)" width="768" height="1034" type="image/jpg"
+                  <source media="(min-width: 768px)" width="768" height="1024" type="image/jpg"
                     srcset="img/hero/slide-2/hero-slide-2-tablet@1x.jpg 1x, img/hero/slide-2/hero-slide-2-tablet@1x.jpg 2x">
                   <img class="hero__image" src="img/hero/slide-2/hero-slide-2-mobile@1x.jpg" width="320" height="568"
                     srcset="img/hero/slide-2/hero-slide-2-mobile@2x.jpg" alt="Фотография" loading="lazy">
@@ -154,10 +156,12 @@
 
               <div class="hero__slide-text-wrapper">
                 <h2 class="hero__slide-title">Волонтёрские программы – внесите свой вклад в общество</h2>
-                <p>Возможности для преподавания, органического сельского хозяйства, устойчивого образа жизни и другое.
-                </p>
-                <div class="hero__button-wrapper">
-                <a class="hero__details button button--primary" href="#">Подробнее</a>
+                <div class="hero__slide-description-wrapper">
+                  <p>Возможности для преподавания, органического сельского хозяйства, устойчивого образа жизни и другое.
+                  </p>
+                  <div class="hero__button-wrapper">
+                    <a class="hero__details button button--primary" href="#">Подробнее</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -166,14 +170,14 @@
                 <picture>
                   <source media="(min-width: 1440px)" width="1440" height="800" type="image/webp"
                     srcset="img/hero/slide-3/hero-slide-3-desktop@1x.webp 1x, img/hero/slide-3/hero-slide-3-desktop@1x.webp 2x">
-                  <source media="(min-width: 768px)" width="768" height="1034" type="image/webp"
+                  <source media="(min-width: 768px)" width="768" height="1024" type="image/webp"
                     srcset="img/hero/slide-3/hero-slide-3-tablet@1x.webp 1x, img/hero/slide-3/hero-slide-3-tablet@1x.webp 2x">
                   <source width="320" height="568" type="image/webp"
                     srcset="img/hero/slide-3/hero-slide-3-mobile@1x.webp 1x, img/hero/slide-3/hero-slide-3-mobile@1x.webp 2x">
 
                   <source media="(min-width: 1440px)" width="1440" height="800" type="image/jpg"
                     srcset="img/hero/slide-3/hero-slide-3-desktop@1x.jpg 1x, img/hero/slide-3/hero-slide-3-desktop@1x.jpg 2x">
-                  <source media="(min-width: 768px)" width="768" height="1034" type="image/jpg"
+                  <source media="(min-width: 768px)" width="768" height="1024" type="image/jpg"
                     srcset="img/hero/slide-3/hero-slide-3-tablet@1x.jpg 1x, img/hero/slide-3/hero-slide-3-tablet@1x.jpg 2x">
                   <img class="hero__image" src="img/hero/slide-2/hero-slide-3-mobile@1x.jpg" width="320" height="568"
                     srcset="img/hero/slide-3/hero-slide-3-mobile@2x.jpg" alt="Фотография" loading="lazy">
@@ -182,16 +186,16 @@
 
               <div class="hero__slide-text-wrapper">
                 <h2 class="hero__slide-title">Программы стажировок в крупнейших компаниях мира</h2>
-                <p>Получите незаменимый опыт работы в ведущих мировых компаниях и государственных организациях.</p>
-               <div class="hero__button-wrapper">
-                <a class="hero__details button button--primary" href="#">Подробнее</a>
-               </div>
+                <div class="hero__slide-description-wrapper">
+                  <p>Получите незаменимый опыт работы в ведущих мировых компаниях и государственных организациях.</p>
+                  <div class="hero__button-wrapper">
+                    <a class="hero__details button button--primary" href="#">Подробнее</a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-          <!-- <div class="hero__pagination-wrapper"> -->
           <div class="hero__pagination swiper-pagination"></div>
-          <!-- </div> -->
         </div>
       </div>
     </section>
@@ -696,14 +700,12 @@
   <svg style="display: none">
     <defs>
       <filter id="gooey-filter">
-        <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="7.5"/>
-        <feColorMatrix in="blur" result="colormatrix"
-          type="matrix"
-          values="1 0 0 0 0
+        <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="7.5" />
+        <feColorMatrix in="blur" result="colormatrix" type="matrix" values="1 0 0 0 0
                   0 1 0 0 0
                   0 0 1 0 0
                   0 0 0 18 -9" />
-        <feBlend in="SourceGraphic" in2="colormatrix"/>
+        <feBlend in="SourceGraphic" in2="colormatrix" />
       </filter>
     </defs>
   </svg>
