feat: add styles in programs mobile block + tests + add all graphics in programs block

--- a/source/index.html
+++ b/source/index.html
@@ -201,129 +201,148 @@
     </section>
 
     <section class="about" data-test="about">
-      <div class="about__about-wrapper">
-        <h2 class="about__title">О проекте «Стажировка»</h2>
-        <p>«Стажировка» — совместный проект правительств и волонтёрских
-          бригад.</p>
-      </div>
-      <div class="about__description-wrapper">
-        <h3>Наша цель</h3>
-        <p>Наша деятельность направлена на повышение квалификации
-          молодых специалистов на ранних и средних стадиях карьеры,
-          предоставляя им инструменты для решения сложных проблем,
-          с которыми сталкиваются в мире. Цель центра — наделить этих
-          людей способностью инициировать значимые изменения.</p>
-        <a class="about__details button button--primary" href="#">Подробнее о проекте</a>
-      </div>
+      <div class="about__main-wrapper">
+        <div class="about__about-wrapper">
+          <h2 class="about__title">О проекте «Стажировка»</h2>
+          <p>«Стажировка» — совместный проект правительств и волонтёрских бригад.</p>
+        </div>
+        <div class="about__description-wrapper">
+          <h3>Наша цель</h3>
+          <p>Наша деятельность направлена на повышение квалификации молодых специалистов на ранних и средних стадиях
+            карьеры, предоставляя им инструменты для решения сложных проблем, с которыми сталкиваются в мире. Цель
+            центра — наделить этих людей способностью инициировать значимые изменения.</p>
+          <a class="about__details button button--secondary" href="#">Подробнее о проекте</a>
+        </div>
 
-      <ul class="about__list">
-        <li class="about__item">
-          <h4>Более 250 программ</h4>
-          <p>учебных и рабочих, разной длительностью от 3 месяцев до 1 года</p>
-        </li>
-        <li class="about__item">
-          <h4>Более 3000 участников</h4>
-          <p>уже успешно прошли программу от «Стажировка» и остались в разных странах</p>
-        </li>
-        <li class="about__item">
-          <h4>Участники из 60 стран</h4>
-          <p>студенты со всего мира приезжают на программу «Стажировки» от 3 месяцев до 1 года</p>
-        </li>
-        <li class="about__item">
-          <h3>От 4 200 $<br>
-            до 8 400 $</h3>
-          <p>грант всем участникам для комфортного прохождения программы</p>
-        </li>
-      </ul>
+        <ul class="about__list">
+          <li class="about__item">
+            <h4>Более 250 программ</h4>
+            <p>учебных и рабочих, разной длительностью от 3 месяцев до 1 года</p>
+          </li>
+          <li class="about__item">
+            <h4>Более 3000 участников</h4>
+            <p>уже успешно прошли программу от «Стажировка» и остались в разных странах</p>
+          </li>
+          <li class="about__item">
+            <h4>Участники из 60 стран</h4>
+            <p>студенты со всего мира приезжают на программу «Стажировки» от 3 месяцев до 1 года</p>
+          </li>
+          <li class="about__item">
+            <h4>От 4 200 $<br>
+              до 8 400 $</h4>
+            <p>грант всем участникам для комфортного прохождения программы</p>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section class="programs" data-test="programs">
-      <h2>Программы</h2>
-      <a class="programs__details button button--primary" href="#">Все программы</a>
-      <div class="programs__swiper swiper">
-        <div class="programs__swiper-wrapper swiper-wrapper">
-          <div class="programs__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 1440px)" width="392" height="420" type="image/webp"
-                srcset="img/hero/kavkaz/hero-kavkaz-desktop@1x.webp 1x, img/hero/kavkaz/hero-kavkaz-desktop@2x.webp 2x">
-              <source media="(min-width: 768px)" width="324" height="420" type="image/webp"
-                srcset="img/hero/kavkaz/hero-kavkaz-tablet@1x.webp 1x, img/hero/kavkaz/hero-kavkaz-tablet@2x.webp 2x">
-              <source width="290" height="400" type="image/webp"
-                srcset="img/hero/kavkaz/hero-kavkaz-mobile@1x.webp 1x, img/hero/kavkaz/hero-kavkaz-mobile@2x.webp 2x">
+      <div class="programs__main-wrapper">
+        <h2 class="programs__title">Программы</h2>
+        <a class="programs__details button button--secondary" href="#">Все программы</a>
+        <div class="programs__swiper swiper">
+          <div class="programs__swiper-wrapper swiper-wrapper">
+            <div class="programs__slide swiper-slide">
+              <picture>
+                <source media="(min-width: 1440px)" width="392" height="420" type="image/webp"
+                  srcset="img/programs/slide-1/programs-slide-1-desktop@1x.webp 1x, img/programs/slide-1/programs-slide-1-desktop@2x.webp 2x">
+                <source media="(min-width: 768px)" width="324" height="420" type="image/webp"
+                  srcset="img/programs/slide-1/programs-slide-1-tablet@1x.webp 1x, img/programs/slide-1/programs-slide-1-tablet@2x.webp 2x">
+                <source width="290" height="400" type="image/webp"
+                  srcset="img/programs/slide-1/programs-slide-1-mobile@1x.webp 1x, img/programs/slide-1/programs-slide-1-mobile@2x.webp 2x">
 
-              <source media="(min-width: 1440px)" width="392" height="420" type="image/jpg"
-                srcset="img/hero/kavkaz/hero-kavkaz-desktop@1x.jpg 1x, img/hero/kavkaz/hero-kavkaz-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" width="324" height="420" type="image/jpg"
-                srcset="img/hero/kavkaz/hero-kavkaz-tablet@1x.jpg 1x, img/hero/kavkaz/hero-kavkaz-tablet@2x.jpg 2x">
-              <img class="programs__slide-image" src="img/hero/kavkaz/hero-kavkaz-mobile@1x.jpg" width="290"
-                height="400" srcset="img/hero/kavkaz/hero-kavkaz-mobile@2x.jpg" alt="Фотография двух учащихся девушек"
-                loading="lazy">
-            </picture>
-            <h3 class="programs__slide-title">Стажировки</h3>
-            <p>Получите незаменимый опыт
-              работы в крупнейших мировых
-              компаниях.</p>
-            <a class="programs__slide-details button button--primary" href="#"><span class="visually-hidden">Подробнее о
-                стажировках</span></a>
+                <source media="(min-width: 1440px)" width="392" height="420" type="image/jpg"
+                  srcset="img/programs/slide-1/programs-slide-1-desktop@1x.jpg 1x, img/programs/slide-1/programs-slide-1-desktop2x.jpg 2x">
+                <source media="(min-width: 768px)" width="324" height="420" type="image/jpg"
+                  srcset="img/programs/slide-1/programs-slide-1-tablet@1x.jpg 1x, img/programs/slide-1/programs-slide-1-tablet@2x.jpg 2x">
+                <img class="programs__slide-image" src="img/programs/slide-1/programs-slide-1-mobile@1x.jpg" width="290"
+                  height="400" srcset="img/programs/slide-1/programs-slide-1-mobile@2x.jpg"
+                  alt="Фотография двух учащихся девушек" loading="lazy">
+              </picture>
+
+              <div class="programs__slide-text-wrapper">
+                <h3 class="programs__slide-title">Стажировки</h3>
+                <div class="programs__slide-description-wrapper">
+                  <p>Получите незаменимый опыт
+                    работы в крупнейших мировых
+                    компаниях.</p>
+                  <a class="programs__slide-details button button--secondary" href="#"><span
+                      class="visually-hidden">Подробнее
+                      о
+                      стажировках</span></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="programs__slide swiper-slide">
+              <picture>
+                <source media="(min-width: 1440px)" width="392" height="420" type="image/webp"
+                  srcset="img/programs/slide-2/programs-slide-2-desktop@1x.webp 1x, img/programs/slide-2/programs-slide-2-desktop@2x.webp 2x">
+                <source media="(min-width: 768px)" width="324" height="420" type="image/webp"
+                  srcset="img/programs/slide-2/programs-slide-2-tablet@1x.webp 1x, img/programs/slide-2/programs-slide-2-tablet@2x.webp 2x">
+                <source width="290" height="400" type="image/webp"
+                  srcset="img/programs/slide-2/programs-slide-2-mobile@1x.webp 1x, img/programs/slide-2/programs-slide-2-mobile@2x.webp 2x">
+
+                <source media="(min-width: 1440px)" width="392" height="420" type="image/jpg"
+                  srcset="img/programs/slide-2/programs-slide-2-desktop@1x.jpg 1x, img/programs/slide-2/programs-slide-2-desktop2x.jpg 2x">
+                <source media="(min-width: 768px)" width="324" height="420" type="image/jpg"
+                  srcset="img/programs/slide-2/programs-slide-2-tablet@1x.jpg 1x, img/programs/slide-1/programs-slide-2-tablet@2x.jpg 2x">
+                <img class="programs__slide-image" src="img/programs/slide-2/programs-slide-2-mobile@1x.jpg" width="290"
+                  height="400" srcset="img/programs/slide-2/programs-slide-2-mobile@2x.jpg"
+                  alt="Фотография мужчины-волонтера" loading="lazy">
+              </picture>
+
+              <div class="programs__slide-text-wrapper">
+                <h3 class="programs__slide-title">Волонтёрство</h3>
+                <div class="programs__slide-description-wrapper">
+                  <p>Помогайте другим и развивайте
+                    свои лидерские качества.</p>
+                  <a class="programs__slide-details button button--secondary" href="#"><span
+                      class="visually-hidden">Подробнее о волонтерстве</span></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="programs__slide swiper-slide">
+              <picture>
+                <source media="(min-width: 1440px)" width="392" height="420" type="image/webp"
+                  srcset="img/programs/slide-3/programs-slide-3-desktop@1x.webp 1x, img/programs/slide-3/programs-slide-3-desktop@2x.webp 2x">
+                <source media="(min-width: 768px)" width="324" height="420" type="image/webp"
+                  srcset="img/programs/slide-3/programs-slide-3-tablet@1x.webp 1x, img/programs/slide-3/programs-slide-3-tablet@2x.webp 2x">
+                <source width="290" height="400" type="image/webp"
+                  srcset="img/programs/slide-3/programs-slide-3-mobile@1x.webp 1x, img/programs/slide-3/programs-slide-3-mobile@2x.webp 2x">
+
+                <source media="(min-width: 1440px)" width="392" height="420" type="image/jpg"
+                  srcset="img/programs/slide-3/programs-slide-3-desktop@1x.jpg 1x, img/programs/slide-3/programs-slide-3-desktop2x.jpg 2x">
+                <source media="(min-width: 768px)" width="324" height="420" type="image/jpg"
+                  srcset="img/programs/slide-3/programs-slide-3-tablet@1x.jpg 1x, img/programs/slide-3/programs-slide-3-tablet@2x.jpg 2x">
+                <img class="programs__slide-image" src="img/programs/slide-3/programs-slide-3-mobile@1x.jpg" width="290"
+                  height="400" srcset="img/programs/slide-3/programs-slide-3-mobile@2x.jpg"
+                  alt="Фотография учащегося мужчины в очках" loading="lazy">
+              </picture>
+
+              <div class="programs__slide-text-wrapper">
+                <h3 class="programs__slide-title">Учёба</h3>
+                <div class="programs__slide-description-wrapper">
+                  <p>Получите образование и измените
+                    своё будущее.</p>
+                  <a class="programs__slide-details button button--secondary" href="#"><span
+                      class="visually-hidden">Подробнее
+                      об учебе</span></a>
+                </div>
+              </div>
+            </div>
+
           </div>
-
-          <div class="programs__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 1440px)" width="392" height="420" type="image/webp"
-                srcset="img/hero/kavkaz/hero-kavkaz-desktop@1x.webp 1x, img/hero/kavkaz/hero-kavkaz-desktop@2x.webp 2x">
-              <source media="(min-width: 768px)" width="324" height="420" type="image/webp"
-                srcset="img/hero/kavkaz/hero-kavkaz-tablet@1x.webp 1x, img/hero/kavkaz/hero-kavkaz-tablet@2x.webp 2x">
-              <source width="290" height="400" type="image/webp"
-                srcset="img/hero/kavkaz/hero-kavkaz-mobile@1x.webp 1x, img/hero/kavkaz/hero-kavkaz-mobile@2x.webp 2x">
-
-              <source media="(min-width: 1440px)" width="392" height="420" type="image/jpg"
-                srcset="img/hero/kavkaz/hero-kavkaz-desktop@1x.jpg 1x, img/hero/kavkaz/hero-kavkaz-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" width="324" height="420" type="image/jpg"
-                srcset="img/hero/kavkaz/hero-kavkaz-tablet@1x.jpg 1x, img/hero/kavkaz/hero-kavkaz-tablet@2x.jpg 2x">
-              <img class="programs__slide-image" src="img/hero/kavkaz/hero-kavkaz-mobile@1x.jpg" width="290"
-                height="400" srcset="img/hero/kavkaz/hero-kavkaz-mobile@2x.jpg" alt="Фотография мужчины волонтера"
-                loading="lazy">
-            </picture>
-
-            <h3 class="programs__slide-title">Волонтёрство</h3>
-            <p>Помогайте другим и развивайте
-              свои лидерские качества.</p>
-            <a class="programs__slide-details button button--primary" href="#"><span class="visually-hidden">Подробнее о
-                волонтерстве</span></a>
-          </div>
-
-          <div class="programs__slide swiper-slide">
-            <picture>
-              <source media="(min-width: 1440px)" width="392" height="420" type="image/webp"
-                srcset="img/hero/kavkaz/hero-kavkaz-desktop@1x.webp 1x, img/hero/kavkaz/hero-kavkaz-desktop@2x.webp 2x">
-              <source media="(min-width: 768px)" width="324" height="420" type="image/webp"
-                srcset="img/hero/kavkaz/hero-kavkaz-tablet@1x.webp 1x, img/hero/kavkaz/hero-kavkaz-tablet@2x.webp 2x">
-              <source width="290" height="400" type="image/webp"
-                srcset="img/hero/kavkaz/hero-kavkaz-mobile@1x.webp 1x, img/hero/kavkaz/hero-kavkaz-mobile@2x.webp 2x">
-
-              <source media="(min-width: 1440px)" width="392" height="420" type="image/jpg"
-                srcset="img/hero/kavkaz/hero-kavkaz-desktop@1x.jpg 1x, img/hero/kavkaz/hero-kavkaz-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" width="324" height="420" type="image/jpg"
-                srcset="img/hero/kavkaz/hero-kavkaz-tablet@1x.jpg 1x, img/hero/kavkaz/hero-kavkaz-tablet@2x.jpg 2x">
-              <img class="programs__slide-image" src="img/hero/kavkaz/hero-kavkaz-mobile@1x.jpg" width="290"
-                height="400" srcset="img/hero/kavkaz/hero-kavkaz-mobile@2x.jpg"
-                alt="Фотография учащегося мужчины в очках" loading="lazy">
-            </picture>
-
-            <h3 class="programs__slide-title">Учёба</h3>
-            <p>Получите образование и измените
-              своё будущее.</p>
-            <a class="programs__slide-details button button--primary" href="#"><span class="visually-hidden">Подробнее
-                об учебе</span></a>
-          </div>
-
         </div>
-        <div class="programs__buttons-container arrow">
+        <div class="programs__buttons-wrapper arrow">
           <button class="programs__button programs__button--prev arrow__button arrow__button--prev swiper-button-prev"
             type="button" aria-label="Кнопка переключения предыдущего слайда"></button>
           <button class="programs__button programs__button--next arrow__button arrow__button--next swiper-button-next"
             type="button" aria-label="Кнопка переключения следующего слайда"></button>
         </div>
+
+        <div class="programs__scrollbar"></div>
       </div>
     </section>
 
