feat: add styles in programs desktop block + tests

--- a/source/index.html
+++ b/source/index.html
@@ -266,8 +266,7 @@
                   <p>Получите незаменимый опыт
                     работы в крупнейших мировых
                     компаниях.</p>
-                  <a class="programs__slide-details button button--secondary" href="#"><span
-                      class="visually-hidden">Подробнее
+                  <a class="programs__slide-details" href="#"><span class="visually-hidden">Подробнее
                       о
                       стажировках</span></a>
                 </div>
@@ -297,8 +296,8 @@
                 <div class="programs__slide-description-wrapper">
                   <p>Помогайте другим и развивайте
                     свои лидерские качества.</p>
-                  <a class="programs__slide-details button button--secondary" href="#"><span
-                      class="visually-hidden">Подробнее о волонтерстве</span></a>
+                  <a class="programs__slide-details" href="#"><span class="visually-hidden">Подробнее о
+                      волонтерстве</span></a>
                 </div>
               </div>
             </div>
@@ -326,15 +325,14 @@
                 <div class="programs__slide-description-wrapper">
                   <p>Получите образование и измените
                     своё будущее.</p>
-                  <a class="programs__slide-details button button--secondary" href="#"><span
-                      class="visually-hidden">Подробнее
+                  <a class="programs__slide-details" href="#"><span class="visually-hidden">Подробнее
                       об учебе</span></a>
                 </div>
               </div>
             </div>
-
           </div>
         </div>
+
         <div class="programs__buttons-wrapper arrow">
           <button class="programs__button programs__button--prev arrow__button arrow__button--prev swiper-button-prev"
             type="button" aria-label="Кнопка переключения предыдущего слайда"></button>
@@ -342,7 +340,7 @@
             type="button" aria-label="Кнопка переключения следующего слайда"></button>
         </div>
 
-        <div class="programs__scrollbar"></div>
+        <div class="programs__scrollbar swiper-scrollbar"></div>
       </div>
     </section>
 
