--- a/source/index.html
+++ b/source/index.html
@@ -352,40 +352,38 @@
             Вы получите актуальные сведения о доступных программах
             и городах, в которых можете пройти программу.</p>
 
-          <div class="grant__image-wrapper">
             <picture>
-              <source media="(min-width: 1440px)" width="392" height="420" type="image/webp"
-                srcset="img/hero/kavkaz/hero-kavkaz-desktop@1x.webp 1x, img/hero/kavkaz/hero-kavkaz-desktop@2x.webp 2x">
-              <source media="(min-width: 768px)" width="324" height="420" type="image/webp"
-                srcset="img/hero/kavkaz/hero-kavkaz-tablet@1x.webp 1x, img/hero/kavkaz/hero-kavkaz-tablet@2x.webp 2x">
-              <source width="290" height="400" type="image/webp"
-                srcset="img/hero/kavkaz/hero-kavkaz-mobile@1x.webp 1x, img/hero/kavkaz/hero-kavkaz-mobile@2x.webp 2x">
+              <source media="(min-width: 1440px)" width="498" height="363" type="image/webp"
+                srcset="img/grant/pointers-desktop@1x.webp 1x, img/grant/pointers-mobile@2x.webp 2x">
+              <source media="(min-width: 768px)" width="678" height="375" type="image/webp"
+                srcset="img/grant/pointers-tablet@1x.webp 1x, img/grant/pointers-tablet@2x.webp 2x">
+              <source width="290" height="200" type="image/webp"
+                srcset="img/grant/pointers-mobile@1x.webp 1x, img/grant/pointers-mobile@2x.webp 2x">
 
-              <source media="(min-width: 1440px)" width="392" height="420" type="image/jpg"
-                srcset="img/hero/kavkaz/hero-kavkaz-desktop@1x.jpg 1x, img/hero/kavkaz/hero-kavkaz-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" width="324" height="420" type="image/jpg"
-                srcset="img/hero/kavkaz/hero-kavkaz-tablet@1x.jpg 1x, img/hero/kavkaz/hero-kavkaz-tablet@2x.jpg 2x">
-              <img class="grant__image" src="img/hero/kavkaz/hero-kavkaz-mobile@1x.jpg" width="290" height="400"
-                srcset="img/hero/kavkaz/hero-kavkaz-mobile@2x.jpg" alt="Фотография учащегося мужчины в очках"
+              <source media="(min-width: 1440px)" width="498" height="363" type="image/jpg"
+                srcset="img/grant/pointers-desktop@1x.jpg 1x, img/grant/pointers-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" width="678" height="375" type="image/jpg"
+                srcset="img/grant/pointers-tablet@1x.jpg 1x, img/grant/pointers-tablet@2x.jpg 2x">
+              <img class="grant__image" src="img/grant/pointers-mobile@1x.jpg" width="290" height="200"
+                srcset="img/grant/pointers-mobile@2x.jpg" alt="Фотография указателей в сторону разных стран"
                 loading="lazy">
             </picture>
-          </div>
         </div>
 
         <div class="grant__list-wrapper">
           <h3 class="grant__subtitle">Чтобы получить грант на обучение, вам нужно:</h3>
           <ol class="grant__list">
             <li class="grant__item">
-              Быть в возрасте от 16 до 30 лет
+              <p class="grant__item-text">Быть в возрасте от 16 до 30 лет</p>
             </li>
             <li class="grant__item">
-              Иметь оконченное среднее образование
+              <p class="grant__item-text">Иметь оконченное среднее образование</p>
             </li>
             <li class="grant__item">
-              Иметь документально подтверждённое отсутствие судимости и пройти консульскую проверку
+              <p class="grant__item-text">Иметь документально подтверждённое отсутствие судимости и пройти консульскую проверку</p>
             </li>
             <li class="grant__item">
-              За последние 2 года быть не больше 3х месяцев подряд непрерывно в одной стране
+              <p class="grant__item-text">За последние 2 года быть не больше 3х месяцев подряд непрерывно в одной стране</p>
             </li>
           </ol>
         </div>
