feat: add styles in FAQ block (mobile) + JS + tests

--- a/source/index.html
+++ b/source/index.html
@@ -813,6 +813,8 @@
     </section>
 
     <section class="faq" data-test="FAQ">
+      <div class="faq__main-wrapper">
+      <h2 class="faq__title">Вопросы и ответы</h2>
       <div class="faq__accordion">
         <div class="faq__accordion-item">
           <h3 class="faq__accordion-title">Кто организатор? Какие сроки у программы?</h3>
@@ -842,7 +844,7 @@
         </div>
 
         <div class="faq__accordion-item">
-          <h3 class="faq__accordion-title">Признаётся ли учёба в рамках проекта для дальнейшего обучения?</h3>
+          <h3 class="faq__accordion-title">Признаётся ли учёба<br> в рамках проекта для<br> дальнейшего обучения?</h3>
           <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
               ответа на
               вопрос</span></button>
@@ -862,6 +864,7 @@
             программе. Подробнее можно узнать позвонив в центр.</p>
         </div>
       </div>
+    </div>
     </section>
 
     <section class="reviews" data-test="reviews">
