feat: add styles in FAQ block on tablet + tests

--- a/source/index.html
+++ b/source/index.html
@@ -844,7 +844,7 @@
         </div>
 
         <div class="faq__accordion-item">
-          <h3 class="faq__accordion-title">Признаётся ли учёба<br> в рамках проекта для<br> дальнейшего обучения?</h3>
+          <h3 class="faq__accordion-title">Признаётся ли учёба<br> в рамках проекта <br>для<br> дальнейшего обучения?</h3>
           <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
               ответа на
               вопрос</span></button>
